--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,5 +12,6 @@ jobs:
     container: node:20
     steps:
       - uses: actions/checkout@v3
-      - run: yarn install
-      - run: yarn test
+      - run: npm install --global pnpm
+      - run: pnpm install
+      - run: pnpm test
