--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "rimraf": "^5.0.5",
     "run-in-every": "^0.2.0",
     "typescript": "^5.2.2"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@project-chip/matter-node.js@0.5.0": "patches/@project-chip__matter-node.js@0.5.0.patch"
+    }
   }
 }
