--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@project-chip/matter.js": "^0.5.0",
     "lock-your-windows": "^0.0.2",
     "main-function": "^0.1.7",
+    "startup-run": "^0.0.2",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
