--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
   "root": true,
   "ignorePatterns": ["node_modules/", "/src/", "/bld/"],
-  "extends": ["plugin:@mufan/js"],
+  "extends": ["plugin:@mufan/javascript"],
   "overrides": [
     {
-      "files": "**/*.{js,jsx}"
+      "files": "**/*.{js,mjs}",
+      "parserOptions": {
+        "sourceType": "module"
+      }
     },
     {
       "files": "**/*.cjs",
