--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "repository": "https://github.com/vilic/desktop-matters.git",
   "license": "MIT",
   "author": "vilicvane",
+  "type": "module",
   "exports": {
     "types": "./bld/library/index.d.ts",
-    "require": "./bld/library/index.js",
     "default": "./bld/library/index.js"
   },
   "scripts": {
     "3": "pnpm install && pnpm dedupe && pnpm install",
     "build": "rimraf ./bld && tsc --build",
-    "lint": "eslint --no-error-on-unmatched-pattern . && run-in-every eslint-project --parallel --echo -- eslint --no-error-on-unmatched-pattern .",
+    "lint": "eslint --no-error-on-unmatched-pattern --report-unused-disable-directives . && run-in-every eslint-project --parallel --echo -- eslint --no-error-on-unmatched-pattern --report-unused-disable-directives .",
     "lint-prettier": "prettier --check .",
     "test": "pnpm lint-prettier && pnpm build && pnpm lint"
   },
@@ -21,9 +21,8 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@mufan/code": "^0.2.17",
-    "@mufan/eslint-plugin": "^0.1.82",
-    "eslint": "^8.50.0",
+    "@mufan/eslint-plugin": "^0.2.14",
+    "eslint": "^8.53.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "run-in-every": "^0.2.0",
